syntax = "proto3";

package ubergrpc;

option go_package = ".;ubergrpc";

import "google/protobuf/empty.proto";

service UberService {
    rpc UberRegister(UberRegisterDTO) returns (Ackonledgment);
    rpc UpdatePosition(stream PositionUpdate) returns (google.protobuf.Empty);
    rpc GetRequests(stream RequestAnswer) returns (stream RequestsUpdates);
}

//for uber registering
message UberRegisterDTO{
    string placa = 1;
    string service_type = 2;
}

message Ackonledgment{
    bool registered = 1;
}

//for position update
message PositionUpdate{
    string placa = 1;
    Position position = 2;
}


//for getting ride requests
message RequestAnswer{
    string placa = 1;
    bool accepted = 2;
}

message RequestsUpdates{
    string client_name = 1;
    Position client_psoition = 2;
    double distance = 3;
    double price = 4;
}

message Position{
    uint32 x_position = 1;
    uint32 y_position = 2;
}